[gd_scene load_steps=4 format=3 uid="uid://boi486cpgr207"]

[ext_resource type="Texture2D" uid="uid://cbw583wq8bcc8" path="res://Assets/images/ui/score_led_blank.png" id="1_b50ot"]
[ext_resource type="Script" path="res://Scenes/UI/ScoreLightRow.gd" id="1_o8co5"]
[ext_resource type="Theme" uid="uid://8bcavu88mft3" path="res://Themes/MainTheme.tres" id="1_v2o5u"]

[node name="ScoreLightRow" type="HBoxContainer"]
theme = ExtResource("1_v2o5u")
script = ExtResource("1_o8co5")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(42, 0)
layout_mode = 2
text = "2"
horizontal_alignment = 2

[node name="Led0" type="NinePatchRect" parent="."]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_b50ot")
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Led1" type="NinePatchRect" parent="."]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_b50ot")
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17

[node name="Led2" type="NinePatchRect" parent="."]
layout_mode = 2
size_flags_vertical = 4
texture = ExtResource("1_b50ot")
patch_margin_left = 17
patch_margin_top = 17
patch_margin_right = 17
patch_margin_bottom = 17
